alignment fix

--- a/src/app/chat/chat-widget/chat-widget.component.scss
+++ b/src/app/chat/chat-widget/chat-widget.component.scss
@@ -1,7 +1,8 @@
 * {
     box-sizing: border-box;
     position: relative;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif,
+        "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .wrapper {
@@ -33,7 +34,7 @@
         }
         display: inline-block;
         margin-right: 50px;
-         ::ng-deep {
+        ::ng-deep {
             p {
                 margin: 0;
             }
@@ -58,7 +59,12 @@
         color: #fff;
         font-size: 32px;
         overflow: hidden;
+        padding: 0;
         float: right;
+        .agent-live-button {
+            width: 100%;
+            height: 100%;
+        }
     }
     .widget-start {
         filter: invert(100%);
@@ -184,7 +190,7 @@
 
 .chat-message-date {
     font-size: 11px;
-    color: #8D898D;
+    color: #8d898d;
     padding: 5px;
 }
 
@@ -199,7 +205,6 @@
     padding: 10px;
     border-radius: 3px;
 }
-
 
 /**
 Received message style
@@ -218,7 +223,7 @@ Received message style
 }
 
 .chat-message-received .chat-message-text {
-    background: #B9D6F2;
+    background: #b9d6f2;
     margin-left: 50px;
     border-bottom-left-radius: 0;
 }
@@ -228,7 +233,7 @@ Received message style
     content: " ";
     left: -10px;
     bottom: 0;
-    border-right: solid 10px #B9D6F2;
+    border-right: solid 10px #b9d6f2;
     border-top: solid 10px transparent;
     z-index: 0;
 }
@@ -247,7 +252,6 @@ Received message style
     bottom: -15px;
 }
 
-
 /**
 Sent message style
  */
@@ -261,7 +265,7 @@ Sent message style
 }
 
 .chat-message-sent .chat-message-text {
-    background: #84DCCF;
+    background: #84dccf;
     margin-right: 50px;
     border-bottom-right-radius: 0;
 }
@@ -271,7 +275,7 @@ Sent message style
     content: " ";
     right: -10px;
     bottom: 0;
-    border-left: solid 10px #84DCCF;
+    border-left: solid 10px #84dccf;
     border-top: solid 10px transparent;
     z-index: 0;
 }
@@ -304,13 +308,12 @@ Sent message style
 }
 
 .red .chat-button {
-    background: #DD0031;
+    background: #dd0031;
 }
 
 .red .chat-box {
-    background: #DD0031;
+    background: #dd0031;
 }
-
 
 /* Small devices (landscape phones, 576px and up)*/
 
@@ -336,7 +339,6 @@ Sent message style
     }
 }
 
-
 /* Medium devices (tablets, 768px and up)*/
 
 @media (min-width: 768px) {
@@ -345,7 +347,6 @@ Sent message style
     }
 }
 
-
 /* Large devices (desktops, 992px and up)*/
 
 @media (min-width: 992px) {
@@ -353,7 +354,6 @@ Sent message style
         height: 80vh;
     }
 }
-
 
 /* Extra large devices (large desktops, 1200px and up)*/
 
@@ -419,7 +419,7 @@ Sent message style
         .operator-name-avatar {
             display: flex;
             justify-content: center;
-             ::ng-deep {
+            ::ng-deep {
                 img {
                     margin-top: 7px;
                 }
@@ -475,7 +475,7 @@ Sent message style
         }
     }
     animation-name: pulse;
-    animation-duration: .9s;
+    animation-duration: 0.9s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-out;
 }
